#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.67])
AC_INIT([Hypermaze], [0.9], [staircae@darkfieldgames.net])
AM_INIT_AUTOMAKE

AC_CONFIG_SRCDIR([src/core/maze.hh])

AC_CONFIG_FILES([Makefile])

# Checks for programs.
AC_PROG_CXX
AM_PROG_CC_C_O

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_OUTPUT
